parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALIAS
    AND
    ARRAY
    AT
    BEGIN
    BITWISE_AND
    BITWISE_NOT
    BITWISE_OR
    BITWISE_XOR
    CLASS
    COMPLEX
    CONSTANT
    DEDENT
    DEFINED
    DOT
    EACH
    ELSEIF
    END_UPPER
    ENSURE
    FILE
    FOR
    GLOBAL
    HASH
    IN
    INDENT
    LINE
    MODULE
    NEXT
    NIL
    NOT
    OP_NOT
    OR
    RATIONAL
    REDO
    RESCUE
    RETRY
    SELF
    SEMICOLON
    SHIFT_LEFT
    SHIFT_RIGHT
    SUPER
    SYMBOL
    UNDEF
    UNLESS
    UNTIL
    WHILE
    YIELD

Grammar

Rule 0     S' -> statement
Rule 1     statement -> set_vacio
Rule 2     statement -> set_numero
Rule 3     statement -> set_str
Rule 4     statement -> array_vacio
Rule 5     statement -> array_numero
Rule 6     statement -> array_str
Rule 7     array_vacio -> ID EQUALS LBRACKET RBRACKET
Rule 8     array_numero -> ID EQUALS LBRACKET varios_numeros RBRACKET
Rule 9     array_str -> ID EQUALS LBRACKET varios_str RBRACKET
Rule 10    set_vacio -> ID EQUALS LCURLYBRACKET RCURLYBRACKET
Rule 11    set_numero -> ID EQUALS LCURLYBRACKET varios_numeros RCURLYBRACKET
Rule 12    set_str -> ID EQUALS LCURLYBRACKET varios_str RCURLYBRACKET
Rule 13    statement -> hash_vacio
Rule 14    statement -> hash_elementos
Rule 15    hash_vacio -> ID EQUALS LCURLYBRACKET RCURLYBRACKET
Rule 16    hash_elementos -> ID EQUALS LCURLYBRACKET varios_pares_hash RCURLYBRACKET
Rule 17    varios_pares_hash -> ID COLON valor
Rule 18    varios_pares_hash -> STR HASHAS valor
Rule 19    varios_pares_hash -> ID COLON valor COMMA varios_pares_hash
Rule 20    varios_pares_hash -> STR HASHAS valor COMMA varios_pares_hash
Rule 21    statement -> IF comparaciones statement END_LOWER
Rule 22    statement -> LOOP DO statement BREAK IF comparacion
Rule 23    statement -> CASE valor when_clauses ELSE statement_list END_LOWER
Rule 24    statement -> CASE valor when_clauses ELSE PUTS valor END_LOWER
Rule 25    when_clauses -> when_clause
Rule 26    when_clauses -> when_clauses when_clause
Rule 27    when_clause -> WHEN valor THEN statement_list
Rule 28    when_clause -> WHEN valor PUTS valor
Rule 29    statement -> DEF ID LPARENTHESIS RPARENTHESIS statement END_LOWER
Rule 30    statement -> DEF ID LPARENTHESIS argumentos RPARENTHESIS statement END_LOWER
Rule 31    statement -> DEF ID LPARENTHESIS argumentos RPARENTHESIS statement RETURN valor END_LOWER
Rule 32    statement -> PUTS valor
Rule 33    varios_str -> STR
Rule 34    varios_str -> STR COMMA STR
Rule 35    statement -> ID EQUALS valor
Rule 36    valor -> numero
Rule 37    valor -> STR
Rule 38    valor -> ID
Rule 39    argumentos -> ID
Rule 40    argumentos -> ID COMMA argumentos
Rule 41    statement_list -> statement_list statement
Rule 42    statement_list -> statement
Rule 43    comparador -> EQUAL
Rule 44    comparador -> NOT_EQUAL
Rule 45    comparador -> GREATER_THAN
Rule 46    comparador -> LESS_THAN
Rule 47    comparador -> GREATER_THAN_EQUAL
Rule 48    comparador -> LESS_THAN_EQUAL
Rule 49    comparacion_num -> numero comparador numero
Rule 50    comparacion_variables -> ID EQUAL ID
Rule 51    comparacion_variables -> ID NOT_EQUAL ID
Rule 52    comparacion_variables -> boolean
Rule 53    comparacion -> comparacion_num
Rule 54    comparacion -> comparacion_variables
Rule 55    comparaciones -> comparacion
Rule 56    comparaciones -> comparacion conector comparacion
Rule 57    conector -> OP_AND
Rule 58    conector -> OP_OR
Rule 59    numero -> INT
Rule 60    numero -> FLOAT
Rule 61    varios_numeros -> numero
Rule 62    varios_numeros -> numero COMMA varios_numeros
Rule 63    statement -> ID EQUALS expresion
Rule 64    operador_aritmetico -> PLUS
Rule 65    operador_aritmetico -> MINUS
Rule 66    operador_aritmetico -> MULTIPLY
Rule 67    operador_aritmetico -> DIVIDE
Rule 68    operador_aritmetico -> MODULO
Rule 69    operador_aritmetico -> EXPONENT
Rule 70    expresion -> numero operador_aritmetico numero
Rule 71    expresion -> ID operador_aritmetico numero
Rule 72    expresion -> ID operador_aritmetico ID
Rule 73    expresion -> numero operador_aritmetico ID
Rule 74    boolean -> TRUE
Rule 75    boolean -> FALSE

Terminals, with rules where they appear

ALIAS                : 
AND                  : 
ARRAY                : 
AT                   : 
BEGIN                : 
BITWISE_AND          : 
BITWISE_NOT          : 
BITWISE_OR           : 
BITWISE_XOR          : 
BREAK                : 22
CASE                 : 23 24
CLASS                : 
COLON                : 17 19
COMMA                : 19 20 34 40 62
COMPLEX              : 
CONSTANT             : 
DEDENT               : 
DEF                  : 29 30 31
DEFINED              : 
DIVIDE               : 67
DO                   : 22
DOT                  : 
EACH                 : 
ELSE                 : 23 24
ELSEIF               : 
END_LOWER            : 21 23 24 29 30 31
END_UPPER            : 
ENSURE               : 
EQUAL                : 43 50
EQUALS               : 7 8 9 10 11 12 15 16 35 63
EXPONENT             : 69
FALSE                : 75
FILE                 : 
FLOAT                : 60
FOR                  : 
GLOBAL               : 
GREATER_THAN         : 45
GREATER_THAN_EQUAL   : 47
HASH                 : 
HASHAS               : 18 20
ID                   : 7 8 9 10 11 12 15 16 17 19 29 30 31 35 38 39 40 50 50 51 51 63 71 72 72 73
IF                   : 21 22
IN                   : 
INDENT               : 
INT                  : 59
LBRACKET             : 7 8 9
LCURLYBRACKET        : 10 11 12 15 16
LESS_THAN            : 46
LESS_THAN_EQUAL      : 48
LINE                 : 
LOOP                 : 22
LPARENTHESIS         : 29 30 31
MINUS                : 65
MODULE               : 
MODULO               : 68
MULTIPLY             : 66
NEXT                 : 
NIL                  : 
NOT                  : 
NOT_EQUAL            : 44 51
OP_AND               : 57
OP_NOT               : 
OP_OR                : 58
OR                   : 
PLUS                 : 64
PUTS                 : 24 28 32
RATIONAL             : 
RBRACKET             : 7 8 9
RCURLYBRACKET        : 10 11 12 15 16
REDO                 : 
RESCUE               : 
RETRY                : 
RETURN               : 31
RPARENTHESIS         : 29 30 31
SELF                 : 
SEMICOLON            : 
SHIFT_LEFT           : 
SHIFT_RIGHT          : 
STR                  : 18 20 33 34 34 37
SUPER                : 
SYMBOL               : 
THEN                 : 27
TRUE                 : 74
UNDEF                : 
UNLESS               : 
UNTIL                : 
WHEN                 : 27 28
WHILE                : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

argumentos           : 30 31 40
array_numero         : 5
array_str            : 6
array_vacio          : 4
boolean              : 52
comparacion          : 22 55 56 56
comparacion_num      : 53
comparacion_variables : 54
comparaciones        : 21
comparador           : 49
conector             : 56
expresion            : 63
hash_elementos       : 14
hash_vacio           : 13
numero               : 36 49 49 61 62 70 70 71 73
operador_aritmetico  : 70 71 72 73
set_numero           : 2
set_str              : 3
set_vacio            : 1
statement            : 21 22 29 30 31 41 42 0
statement_list       : 23 27 41
valor                : 17 18 19 20 23 24 24 27 28 28 31 32 35
varios_numeros       : 8 11 62
varios_pares_hash    : 16 19 20
varios_str           : 9 12
when_clause          : 25 26
when_clauses         : 23 24 26

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . set_vacio
    (2) statement -> . set_numero
    (3) statement -> . set_str
    (4) statement -> . array_vacio
    (5) statement -> . array_numero
    (6) statement -> . array_str
    (13) statement -> . hash_vacio
    (14) statement -> . hash_elementos
    (21) statement -> . IF comparaciones statement END_LOWER
    (22) statement -> . LOOP DO statement BREAK IF comparacion
    (23) statement -> . CASE valor when_clauses ELSE statement_list END_LOWER
    (24) statement -> . CASE valor when_clauses ELSE PUTS valor END_LOWER
    (29) statement -> . DEF ID LPARENTHESIS RPARENTHESIS statement END_LOWER
    (30) statement -> . DEF ID LPARENTHESIS argumentos RPARENTHESIS statement END_LOWER
    (31) statement -> . DEF ID LPARENTHESIS argumentos RPARENTHESIS statement RETURN valor END_LOWER
    (32) statement -> . PUTS valor
    (35) statement -> . ID EQUALS valor
    (63) statement -> . ID EQUALS expresion
    (10) set_vacio -> . ID EQUALS LCURLYBRACKET RCURLYBRACKET
    (11) set_numero -> . ID EQUALS LCURLYBRACKET varios_numeros RCURLYBRACKET
    (12) set_str -> . ID EQUALS LCURLYBRACKET varios_str RCURLYBRACKET
    (7) array_vacio -> . ID EQUALS LBRACKET RBRACKET
    (8) array_numero -> . ID EQUALS LBRACKET varios_numeros RBRACKET
    (9) array_str -> . ID EQUALS LBRACKET varios_str RBRACKET
    (15) hash_vacio -> . ID EQUALS LCURLYBRACKET RCURLYBRACKET
    (16) hash_elementos -> . ID EQUALS LCURLYBRACKET varios_pares_hash RCURLYBRACKET

    IF              shift and go to state 10
    LOOP            shift and go to state 11
    CASE            shift and go to state 12
    DEF             shift and go to state 14
    PUTS            shift and go to state 13
    ID              shift and go to state 15

    statement                      shift and go to state 1
    set_vacio                      shift and go to state 2
    set_numero                     shift and go to state 3
    set_str                        shift and go to state 4
    array_vacio                    shift and go to state 5
    array_numero                   shift and go to state 6
    array_str                      shift and go to state 7
    hash_vacio                     shift and go to state 8
    hash_elementos                 shift and go to state 9

state 1

    (0) S' -> statement .



state 2

    (1) statement -> set_vacio .

    $end            reduce using rule 1 (statement -> set_vacio .)
    END_LOWER       reduce using rule 1 (statement -> set_vacio .)
    BREAK           reduce using rule 1 (statement -> set_vacio .)
    IF              reduce using rule 1 (statement -> set_vacio .)
    LOOP            reduce using rule 1 (statement -> set_vacio .)
    CASE            reduce using rule 1 (statement -> set_vacio .)
    DEF             reduce using rule 1 (statement -> set_vacio .)
    PUTS            reduce using rule 1 (statement -> set_vacio .)
    ID              reduce using rule 1 (statement -> set_vacio .)
    ELSE            reduce using rule 1 (statement -> set_vacio .)
    WHEN            reduce using rule 1 (statement -> set_vacio .)
    RETURN          reduce using rule 1 (statement -> set_vacio .)


state 3

    (2) statement -> set_numero .

    $end            reduce using rule 2 (statement -> set_numero .)
    END_LOWER       reduce using rule 2 (statement -> set_numero .)
    BREAK           reduce using rule 2 (statement -> set_numero .)
    IF              reduce using rule 2 (statement -> set_numero .)
    LOOP            reduce using rule 2 (statement -> set_numero .)
    CASE            reduce using rule 2 (statement -> set_numero .)
    DEF             reduce using rule 2 (statement -> set_numero .)
    PUTS            reduce using rule 2 (statement -> set_numero .)
    ID              reduce using rule 2 (statement -> set_numero .)
    ELSE            reduce using rule 2 (statement -> set_numero .)
    WHEN            reduce using rule 2 (statement -> set_numero .)
    RETURN          reduce using rule 2 (statement -> set_numero .)


state 4

    (3) statement -> set_str .

    $end            reduce using rule 3 (statement -> set_str .)
    END_LOWER       reduce using rule 3 (statement -> set_str .)
    BREAK           reduce using rule 3 (statement -> set_str .)
    IF              reduce using rule 3 (statement -> set_str .)
    LOOP            reduce using rule 3 (statement -> set_str .)
    CASE            reduce using rule 3 (statement -> set_str .)
    DEF             reduce using rule 3 (statement -> set_str .)
    PUTS            reduce using rule 3 (statement -> set_str .)
    ID              reduce using rule 3 (statement -> set_str .)
    ELSE            reduce using rule 3 (statement -> set_str .)
    WHEN            reduce using rule 3 (statement -> set_str .)
    RETURN          reduce using rule 3 (statement -> set_str .)


state 5

    (4) statement -> array_vacio .

    $end            reduce using rule 4 (statement -> array_vacio .)
    END_LOWER       reduce using rule 4 (statement -> array_vacio .)
    BREAK           reduce using rule 4 (statement -> array_vacio .)
    IF              reduce using rule 4 (statement -> array_vacio .)
    LOOP            reduce using rule 4 (statement -> array_vacio .)
    CASE            reduce using rule 4 (statement -> array_vacio .)
    DEF             reduce using rule 4 (statement -> array_vacio .)
    PUTS            reduce using rule 4 (statement -> array_vacio .)
    ID              reduce using rule 4 (statement -> array_vacio .)
    ELSE            reduce using rule 4 (statement -> array_vacio .)
    WHEN            reduce using rule 4 (statement -> array_vacio .)
    RETURN          reduce using rule 4 (statement -> array_vacio .)


state 6

    (5) statement -> array_numero .

    $end            reduce using rule 5 (statement -> array_numero .)
    END_LOWER       reduce using rule 5 (statement -> array_numero .)
    BREAK           reduce using rule 5 (statement -> array_numero .)
    IF              reduce using rule 5 (statement -> array_numero .)
    LOOP            reduce using rule 5 (statement -> array_numero .)
    CASE            reduce using rule 5 (statement -> array_numero .)
    DEF             reduce using rule 5 (statement -> array_numero .)
    PUTS            reduce using rule 5 (statement -> array_numero .)
    ID              reduce using rule 5 (statement -> array_numero .)
    ELSE            reduce using rule 5 (statement -> array_numero .)
    WHEN            reduce using rule 5 (statement -> array_numero .)
    RETURN          reduce using rule 5 (statement -> array_numero .)


state 7

    (6) statement -> array_str .

    $end            reduce using rule 6 (statement -> array_str .)
    END_LOWER       reduce using rule 6 (statement -> array_str .)
    BREAK           reduce using rule 6 (statement -> array_str .)
    IF              reduce using rule 6 (statement -> array_str .)
    LOOP            reduce using rule 6 (statement -> array_str .)
    CASE            reduce using rule 6 (statement -> array_str .)
    DEF             reduce using rule 6 (statement -> array_str .)
    PUTS            reduce using rule 6 (statement -> array_str .)
    ID              reduce using rule 6 (statement -> array_str .)
    ELSE            reduce using rule 6 (statement -> array_str .)
    WHEN            reduce using rule 6 (statement -> array_str .)
    RETURN          reduce using rule 6 (statement -> array_str .)


state 8

    (13) statement -> hash_vacio .

    $end            reduce using rule 13 (statement -> hash_vacio .)
    END_LOWER       reduce using rule 13 (statement -> hash_vacio .)
    BREAK           reduce using rule 13 (statement -> hash_vacio .)
    IF              reduce using rule 13 (statement -> hash_vacio .)
    LOOP            reduce using rule 13 (statement -> hash_vacio .)
    CASE            reduce using rule 13 (statement -> hash_vacio .)
    DEF             reduce using rule 13 (statement -> hash_vacio .)
    PUTS            reduce using rule 13 (statement -> hash_vacio .)
    ID              reduce using rule 13 (statement -> hash_vacio .)
    ELSE            reduce using rule 13 (statement -> hash_vacio .)
    WHEN            reduce using rule 13 (statement -> hash_vacio .)
    RETURN          reduce using rule 13 (statement -> hash_vacio .)


state 9

    (14) statement -> hash_elementos .

    $end            reduce using rule 14 (statement -> hash_elementos .)
    END_LOWER       reduce using rule 14 (statement -> hash_elementos .)
    BREAK           reduce using rule 14 (statement -> hash_elementos .)
    IF              reduce using rule 14 (statement -> hash_elementos .)
    LOOP            reduce using rule 14 (statement -> hash_elementos .)
    CASE            reduce using rule 14 (statement -> hash_elementos .)
    DEF             reduce using rule 14 (statement -> hash_elementos .)
    PUTS            reduce using rule 14 (statement -> hash_elementos .)
    ID              reduce using rule 14 (statement -> hash_elementos .)
    ELSE            reduce using rule 14 (statement -> hash_elementos .)
    WHEN            reduce using rule 14 (statement -> hash_elementos .)
    RETURN          reduce using rule 14 (statement -> hash_elementos .)


state 10

    (21) statement -> IF . comparaciones statement END_LOWER
    (55) comparaciones -> . comparacion
    (56) comparaciones -> . comparacion conector comparacion
    (53) comparacion -> . comparacion_num
    (54) comparacion -> . comparacion_variables
    (49) comparacion_num -> . numero comparador numero
    (50) comparacion_variables -> . ID EQUAL ID
    (51) comparacion_variables -> . ID NOT_EQUAL ID
    (52) comparacion_variables -> . boolean
    (59) numero -> . INT
    (60) numero -> . FLOAT
    (74) boolean -> . TRUE
    (75) boolean -> . FALSE

    ID              shift and go to state 21
    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26

    comparaciones                  shift and go to state 16
    comparacion                    shift and go to state 17
    comparacion_num                shift and go to state 18
    comparacion_variables          shift and go to state 19
    numero                         shift and go to state 20
    boolean                        shift and go to state 22

state 11

    (22) statement -> LOOP . DO statement BREAK IF comparacion

    DO              shift and go to state 27


state 12

    (23) statement -> CASE . valor when_clauses ELSE statement_list END_LOWER
    (24) statement -> CASE . valor when_clauses ELSE PUTS valor END_LOWER
    (36) valor -> . numero
    (37) valor -> . STR
    (38) valor -> . ID
    (59) numero -> . INT
    (60) numero -> . FLOAT

    STR             shift and go to state 30
    ID              shift and go to state 31
    INT             shift and go to state 23
    FLOAT           shift and go to state 24

    valor                          shift and go to state 28
    numero                         shift and go to state 29

state 13

    (32) statement -> PUTS . valor
    (36) valor -> . numero
    (37) valor -> . STR
    (38) valor -> . ID
    (59) numero -> . INT
    (60) numero -> . FLOAT

    STR             shift and go to state 30
    ID              shift and go to state 31
    INT             shift and go to state 23
    FLOAT           shift and go to state 24

    valor                          shift and go to state 32
    numero                         shift and go to state 29

state 14

    (29) statement -> DEF . ID LPARENTHESIS RPARENTHESIS statement END_LOWER
    (30) statement -> DEF . ID LPARENTHESIS argumentos RPARENTHESIS statement END_LOWER
    (31) statement -> DEF . ID LPARENTHESIS argumentos RPARENTHESIS statement RETURN valor END_LOWER

    ID              shift and go to state 33


state 15

    (35) statement -> ID . EQUALS valor
    (63) statement -> ID . EQUALS expresion
    (10) set_vacio -> ID . EQUALS LCURLYBRACKET RCURLYBRACKET
    (11) set_numero -> ID . EQUALS LCURLYBRACKET varios_numeros RCURLYBRACKET
    (12) set_str -> ID . EQUALS LCURLYBRACKET varios_str RCURLYBRACKET
    (7) array_vacio -> ID . EQUALS LBRACKET RBRACKET
    (8) array_numero -> ID . EQUALS LBRACKET varios_numeros RBRACKET
    (9) array_str -> ID . EQUALS LBRACKET varios_str RBRACKET
    (15) hash_vacio -> ID . EQUALS LCURLYBRACKET RCURLYBRACKET
    (16) hash_elementos -> ID . EQUALS LCURLYBRACKET varios_pares_hash RCURLYBRACKET

    EQUALS          shift and go to state 34


state 16

    (21) statement -> IF comparaciones . statement END_LOWER
    (1) statement -> . set_vacio
    (2) statement -> . set_numero
    (3) statement -> . set_str
    (4) statement -> . array_vacio
    (5) statement -> . array_numero
    (6) statement -> . array_str
    (13) statement -> . hash_vacio
    (14) statement -> . hash_elementos
    (21) statement -> . IF comparaciones statement END_LOWER
    (22) statement -> . LOOP DO statement BREAK IF comparacion
    (23) statement -> . CASE valor when_clauses ELSE statement_list END_LOWER
    (24) statement -> . CASE valor when_clauses ELSE PUTS valor END_LOWER
    (29) statement -> . DEF ID LPARENTHESIS RPARENTHESIS statement END_LOWER
    (30) statement -> . DEF ID LPARENTHESIS argumentos RPARENTHESIS statement END_LOWER
    (31) statement -> . DEF ID LPARENTHESIS argumentos RPARENTHESIS statement RETURN valor END_LOWER
    (32) statement -> . PUTS valor
    (35) statement -> . ID EQUALS valor
    (63) statement -> . ID EQUALS expresion
    (10) set_vacio -> . ID EQUALS LCURLYBRACKET RCURLYBRACKET
    (11) set_numero -> . ID EQUALS LCURLYBRACKET varios_numeros RCURLYBRACKET
    (12) set_str -> . ID EQUALS LCURLYBRACKET varios_str RCURLYBRACKET
    (7) array_vacio -> . ID EQUALS LBRACKET RBRACKET
    (8) array_numero -> . ID EQUALS LBRACKET varios_numeros RBRACKET
    (9) array_str -> . ID EQUALS LBRACKET varios_str RBRACKET
    (15) hash_vacio -> . ID EQUALS LCURLYBRACKET RCURLYBRACKET
    (16) hash_elementos -> . ID EQUALS LCURLYBRACKET varios_pares_hash RCURLYBRACKET

    IF              shift and go to state 10
    LOOP            shift and go to state 11
    CASE            shift and go to state 12
    DEF             shift and go to state 14
    PUTS            shift and go to state 13
    ID              shift and go to state 15

    statement                      shift and go to state 35
    set_vacio                      shift and go to state 2
    set_numero                     shift and go to state 3
    set_str                        shift and go to state 4
    array_vacio                    shift and go to state 5
    array_numero                   shift and go to state 6
    array_str                      shift and go to state 7
    hash_vacio                     shift and go to state 8
    hash_elementos                 shift and go to state 9

state 17

    (55) comparaciones -> comparacion .
    (56) comparaciones -> comparacion . conector comparacion
    (57) conector -> . OP_AND
    (58) conector -> . OP_OR

    IF              reduce using rule 55 (comparaciones -> comparacion .)
    LOOP            reduce using rule 55 (comparaciones -> comparacion .)
    CASE            reduce using rule 55 (comparaciones -> comparacion .)
    DEF             reduce using rule 55 (comparaciones -> comparacion .)
    PUTS            reduce using rule 55 (comparaciones -> comparacion .)
    ID              reduce using rule 55 (comparaciones -> comparacion .)
    OP_AND          shift and go to state 37
    OP_OR           shift and go to state 38

    conector                       shift and go to state 36

state 18

    (53) comparacion -> comparacion_num .

    OP_AND          reduce using rule 53 (comparacion -> comparacion_num .)
    OP_OR           reduce using rule 53 (comparacion -> comparacion_num .)
    IF              reduce using rule 53 (comparacion -> comparacion_num .)
    LOOP            reduce using rule 53 (comparacion -> comparacion_num .)
    CASE            reduce using rule 53 (comparacion -> comparacion_num .)
    DEF             reduce using rule 53 (comparacion -> comparacion_num .)
    PUTS            reduce using rule 53 (comparacion -> comparacion_num .)
    ID              reduce using rule 53 (comparacion -> comparacion_num .)
    $end            reduce using rule 53 (comparacion -> comparacion_num .)
    END_LOWER       reduce using rule 53 (comparacion -> comparacion_num .)
    BREAK           reduce using rule 53 (comparacion -> comparacion_num .)
    ELSE            reduce using rule 53 (comparacion -> comparacion_num .)
    WHEN            reduce using rule 53 (comparacion -> comparacion_num .)
    RETURN          reduce using rule 53 (comparacion -> comparacion_num .)


state 19

    (54) comparacion -> comparacion_variables .

    OP_AND          reduce using rule 54 (comparacion -> comparacion_variables .)
    OP_OR           reduce using rule 54 (comparacion -> comparacion_variables .)
    IF              reduce using rule 54 (comparacion -> comparacion_variables .)
    LOOP            reduce using rule 54 (comparacion -> comparacion_variables .)
    CASE            reduce using rule 54 (comparacion -> comparacion_variables .)
    DEF             reduce using rule 54 (comparacion -> comparacion_variables .)
    PUTS            reduce using rule 54 (comparacion -> comparacion_variables .)
    ID              reduce using rule 54 (comparacion -> comparacion_variables .)
    $end            reduce using rule 54 (comparacion -> comparacion_variables .)
    END_LOWER       reduce using rule 54 (comparacion -> comparacion_variables .)
    BREAK           reduce using rule 54 (comparacion -> comparacion_variables .)
    ELSE            reduce using rule 54 (comparacion -> comparacion_variables .)
    WHEN            reduce using rule 54 (comparacion -> comparacion_variables .)
    RETURN          reduce using rule 54 (comparacion -> comparacion_variables .)


state 20

    (49) comparacion_num -> numero . comparador numero
    (43) comparador -> . EQUAL
    (44) comparador -> . NOT_EQUAL
    (45) comparador -> . GREATER_THAN
    (46) comparador -> . LESS_THAN
    (47) comparador -> . GREATER_THAN_EQUAL
    (48) comparador -> . LESS_THAN_EQUAL

    EQUAL           shift and go to state 40
    NOT_EQUAL       shift and go to state 41
    GREATER_THAN    shift and go to state 42
    LESS_THAN       shift and go to state 43
    GREATER_THAN_EQUAL shift and go to state 44
    LESS_THAN_EQUAL shift and go to state 45

    comparador                     shift and go to state 39

state 21

    (50) comparacion_variables -> ID . EQUAL ID
    (51) comparacion_variables -> ID . NOT_EQUAL ID

    EQUAL           shift and go to state 46
    NOT_EQUAL       shift and go to state 47


state 22

    (52) comparacion_variables -> boolean .

    OP_AND          reduce using rule 52 (comparacion_variables -> boolean .)
    OP_OR           reduce using rule 52 (comparacion_variables -> boolean .)
    IF              reduce using rule 52 (comparacion_variables -> boolean .)
    LOOP            reduce using rule 52 (comparacion_variables -> boolean .)
    CASE            reduce using rule 52 (comparacion_variables -> boolean .)
    DEF             reduce using rule 52 (comparacion_variables -> boolean .)
    PUTS            reduce using rule 52 (comparacion_variables -> boolean .)
    ID              reduce using rule 52 (comparacion_variables -> boolean .)
    $end            reduce using rule 52 (comparacion_variables -> boolean .)
    END_LOWER       reduce using rule 52 (comparacion_variables -> boolean .)
    BREAK           reduce using rule 52 (comparacion_variables -> boolean .)
    ELSE            reduce using rule 52 (comparacion_variables -> boolean .)
    WHEN            reduce using rule 52 (comparacion_variables -> boolean .)
    RETURN          reduce using rule 52 (comparacion_variables -> boolean .)


state 23

    (59) numero -> INT .

    EQUAL           reduce using rule 59 (numero -> INT .)
    NOT_EQUAL       reduce using rule 59 (numero -> INT .)
    GREATER_THAN    reduce using rule 59 (numero -> INT .)
    LESS_THAN       reduce using rule 59 (numero -> INT .)
    GREATER_THAN_EQUAL reduce using rule 59 (numero -> INT .)
    LESS_THAN_EQUAL reduce using rule 59 (numero -> INT .)
    WHEN            reduce using rule 59 (numero -> INT .)
    $end            reduce using rule 59 (numero -> INT .)
    END_LOWER       reduce using rule 59 (numero -> INT .)
    BREAK           reduce using rule 59 (numero -> INT .)
    IF              reduce using rule 59 (numero -> INT .)
    LOOP            reduce using rule 59 (numero -> INT .)
    CASE            reduce using rule 59 (numero -> INT .)
    DEF             reduce using rule 59 (numero -> INT .)
    PUTS            reduce using rule 59 (numero -> INT .)
    ID              reduce using rule 59 (numero -> INT .)
    ELSE            reduce using rule 59 (numero -> INT .)
    RETURN          reduce using rule 59 (numero -> INT .)
    PLUS            reduce using rule 59 (numero -> INT .)
    MINUS           reduce using rule 59 (numero -> INT .)
    MULTIPLY        reduce using rule 59 (numero -> INT .)
    DIVIDE          reduce using rule 59 (numero -> INT .)
    MODULO          reduce using rule 59 (numero -> INT .)
    EXPONENT        reduce using rule 59 (numero -> INT .)
    OP_AND          reduce using rule 59 (numero -> INT .)
    OP_OR           reduce using rule 59 (numero -> INT .)
    THEN            reduce using rule 59 (numero -> INT .)
    COMMA           reduce using rule 59 (numero -> INT .)
    RCURLYBRACKET   reduce using rule 59 (numero -> INT .)
    RBRACKET        reduce using rule 59 (numero -> INT .)


state 24

    (60) numero -> FLOAT .

    EQUAL           reduce using rule 60 (numero -> FLOAT .)
    NOT_EQUAL       reduce using rule 60 (numero -> FLOAT .)
    GREATER_THAN    reduce using rule 60 (numero -> FLOAT .)
    LESS_THAN       reduce using rule 60 (numero -> FLOAT .)
    GREATER_THAN_EQUAL reduce using rule 60 (numero -> FLOAT .)
    LESS_THAN_EQUAL reduce using rule 60 (numero -> FLOAT .)
    WHEN            reduce using rule 60 (numero -> FLOAT .)
    $end            reduce using rule 60 (numero -> FLOAT .)
    END_LOWER       reduce using rule 60 (numero -> FLOAT .)
    BREAK           reduce using rule 60 (numero -> FLOAT .)
    IF              reduce using rule 60 (numero -> FLOAT .)
    LOOP            reduce using rule 60 (numero -> FLOAT .)
    CASE            reduce using rule 60 (numero -> FLOAT .)
    DEF             reduce using rule 60 (numero -> FLOAT .)
    PUTS            reduce using rule 60 (numero -> FLOAT .)
    ID              reduce using rule 60 (numero -> FLOAT .)
    ELSE            reduce using rule 60 (numero -> FLOAT .)
    RETURN          reduce using rule 60 (numero -> FLOAT .)
    PLUS            reduce using rule 60 (numero -> FLOAT .)
    MINUS           reduce using rule 60 (numero -> FLOAT .)
    MULTIPLY        reduce using rule 60 (numero -> FLOAT .)
    DIVIDE          reduce using rule 60 (numero -> FLOAT .)
    MODULO          reduce using rule 60 (numero -> FLOAT .)
    EXPONENT        reduce using rule 60 (numero -> FLOAT .)
    OP_AND          reduce using rule 60 (numero -> FLOAT .)
    OP_OR           reduce using rule 60 (numero -> FLOAT .)
    THEN            reduce using rule 60 (numero -> FLOAT .)
    COMMA           reduce using rule 60 (numero -> FLOAT .)
    RCURLYBRACKET   reduce using rule 60 (numero -> FLOAT .)
    RBRACKET        reduce using rule 60 (numero -> FLOAT .)


state 25

    (74) boolean -> TRUE .

    OP_AND          reduce using rule 74 (boolean -> TRUE .)
    OP_OR           reduce using rule 74 (boolean -> TRUE .)
    IF              reduce using rule 74 (boolean -> TRUE .)
    LOOP            reduce using rule 74 (boolean -> TRUE .)
    CASE            reduce using rule 74 (boolean -> TRUE .)
    DEF             reduce using rule 74 (boolean -> TRUE .)
    PUTS            reduce using rule 74 (boolean -> TRUE .)
    ID              reduce using rule 74 (boolean -> TRUE .)
    $end            reduce using rule 74 (boolean -> TRUE .)
    END_LOWER       reduce using rule 74 (boolean -> TRUE .)
    BREAK           reduce using rule 74 (boolean -> TRUE .)
    ELSE            reduce using rule 74 (boolean -> TRUE .)
    WHEN            reduce using rule 74 (boolean -> TRUE .)
    RETURN          reduce using rule 74 (boolean -> TRUE .)


state 26

    (75) boolean -> FALSE .

    OP_AND          reduce using rule 75 (boolean -> FALSE .)
    OP_OR           reduce using rule 75 (boolean -> FALSE .)
    IF              reduce using rule 75 (boolean -> FALSE .)
    LOOP            reduce using rule 75 (boolean -> FALSE .)
    CASE            reduce using rule 75 (boolean -> FALSE .)
    DEF             reduce using rule 75 (boolean -> FALSE .)
    PUTS            reduce using rule 75 (boolean -> FALSE .)
    ID              reduce using rule 75 (boolean -> FALSE .)
    $end            reduce using rule 75 (boolean -> FALSE .)
    END_LOWER       reduce using rule 75 (boolean -> FALSE .)
    BREAK           reduce using rule 75 (boolean -> FALSE .)
    ELSE            reduce using rule 75 (boolean -> FALSE .)
    WHEN            reduce using rule 75 (boolean -> FALSE .)
    RETURN          reduce using rule 75 (boolean -> FALSE .)


state 27
